# hfsync

./: CHANGELOG.md  MAINTAINING.md  README.md  pyproject.toml  setup.py  upload_to_hf.py
.github/workflows/: publish.yml  release-please.yml
scripts/: release.sh
