[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfsync"
version = "0.1.1"
description = "Manifest-driven Hugging Face upload/download CLI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "huggingface_hub>=0.23.0",
]

[project.scripts]
hfsync = "upload_to_hf:main"

[tool.setuptools]
py-modules = ["upload_to_hf"]
