[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huggingfacesync"
version = "0.1.3"
description = "Manifest-driven Hugging Face upload/download CLI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "huggingface_hub>=1.0.0",
]

[project.scripts]
huggingfacesync = "upload_to_hf:main"
hfsync = "upload_to_hf:main"

[tool.setuptools]
py-modules = ["upload_to_hf"]
